# yamc

./: .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  appveyor.yml
include/: alternate_mutex.hpp  alternate_shared_mutex.hpp  apple_native_mutex.hpp  checked_mutex.hpp  checked_shared_mutex.hpp  fair_mutex.hpp  fair_shared_mutex.hpp  gcd_semaphore.hpp  naive_spin_mutex.hpp  posix_mutex.hpp  posix_native_mutex.hpp  posix_semaphore.hpp  posix_shared_mutex.hpp  ttas_spin_mutex.hpp  win_mutex.hpp  win_native_mutex.hpp  win_semaphore.hpp  win_shared_mutex.hpp  yamc_backoff_spin.hpp  yamc_barrier.hpp  yamc_latch.hpp  yamc_lock_validator.hpp  yamc_rwlock_sched.hpp  yamc_semaphore.hpp  yamc_shared_lock.hpp
tests/: BUILD.bazel  CMakeLists.txt  barrier_test.cpp  basic_test.cpp  checked_test.cpp  compile_test.cpp  deadlock_test.cpp  dump_sizeof.cpp  dump_typeinfo.cpp  fairness_test.cpp  latch_test.cpp  lock_test.cpp  perf_rwlock.cpp  perf_rwlock.sh  rwlock_test.cpp  semaphore_test.cpp  spinlock_test.cpp  yamc_test.hpp  yamc_testutil.hpp
